Adds in stock quantity to product catalog
